# $Id: Makefile.am 47224 2013-01-23 12:08:15Z etxrab $
#
MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	wireshark.nsi	\
	uninstall.nsi	\
	common.nsh	\
	GetWindowsVersion.nsh \
	servicelib.nsh \
	VersionCompare.nsh \
	AdditionalTasksPage.ini \
	WinPcapPage.ini \
	Makefile.nmake \
	Custom.nmake \
	custom_plugins.txt	\
	custom_mibs.txt	\
	custom_radius_dict.txt	\
	x64.nsh
